--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -29,8 +29,13 @@ spring:
     multipart:
       max-file-size: 10MB
       max-request-size: 10MB
+  messages:
+    basename: i18n/messages
+    encoding: UTF-8
+    default-locale: en
 api:
-  prefix: api/v1/
+  prefix: /api/v1
 jwt:
   expiration: 2592000 #30 days
+  expiration-refresh-token: 5184000 #60 days
   secretKey: jtc6zcRYQr5lZj4UCIwkIbLjpP/AhDbSiZhUHa5VoGw=
